Merged SurveyUnitUpdateDocument to SurveyUnitDocument