@@ -19,7 +19,7 @@ import java.util.Optional;
 import static org.assertj.core.api.Assertions.assertThat;
 
 class DataVerifierTest {
-    static List<SurveyUnitUpdateDto> testSurveyUnitUpdateDtos = new ArrayList<>();
+    static List<SurveyUnitDto> testSurveyUnitDtos = new ArrayList<>();
     static MetadataModel metadataModel;
 
     // Given
@@ -30,104 +30,104 @@ class DataVerifierTest {
 
         //Invalid Collected Variables only
         //1 Variable 1 State 1 Value
-        createCase(1,1,1,true,false,"TestUE1",testSurveyUnitUpdateDtos,metadataModel.getVariables());
+        createCase(1,1,1,true,false,"TestUE1",testSurveyUnitDtos,metadataModel.getVariables());
 
         //1 Variable 1 State 2 Values
-        createCase(1,1,2,true,false,"TestUE2",testSurveyUnitUpdateDtos,metadataModel.getVariables());
+        createCase(1,1,2,true,false,"TestUE2",testSurveyUnitDtos,metadataModel.getVariables());
 
         //1 Variable 2 States 1 Value
-        createCase(1,2,1,true,false,"TestUE3",testSurveyUnitUpdateDtos,metadataModel.getVariables());
+        createCase(1,2,1,true,false,"TestUE3",testSurveyUnitDtos,metadataModel.getVariables());
 
         //1 Variable 2 States 2 Values
-        createCase(1,2,2,true,false,"TestUE4",testSurveyUnitUpdateDtos,metadataModel.getVariables());
+        createCase(1,2,2,true,false,"TestUE4",testSurveyUnitDtos,metadataModel.getVariables());
 
         //2 Variables 1 State 1 Value
-        createCase(2,1,1,true,false,"TestUE5",testSurveyUnitUpdateDtos,metadataModel.getVariables());
+        createCase(2,1,1,true,false,"TestUE5",testSurveyUnitDtos,metadataModel.getVariables());
 
         //2 Variables 1 State 2 Values
-        createCase(2,1,2,true,false,"TestUE6",testSurveyUnitUpdateDtos,metadataModel.getVariables());
+        createCase(2,1,2,true,false,"TestUE6",testSurveyUnitDtos,metadataModel.getVariables());
 
         //2 Variables 2 States 1 Value
-        createCase(2,2,1,true,false,"TestUE7",testSurveyUnitUpdateDtos,metadataModel.getVariables());
+        createCase(2,2,1,true,false,"TestUE7",testSurveyUnitDtos,metadataModel.getVariables());
 
         //2 Variables 2 State 2 Value
-        createCase(2,2,2,true,false,"TestUE8",testSurveyUnitUpdateDtos,metadataModel.getVariables());
+        createCase(2,2,2,true,false,"TestUE8",testSurveyUnitDtos,metadataModel.getVariables());
 
 
         //With invalid ExternalVariables
-        createCase(1,1,1,true,true,"TestUE9",testSurveyUnitUpdateDtos,metadataModel.getVariables());
+        createCase(1,1,1,true,true,"TestUE9",testSurveyUnitDtos,metadataModel.getVariables());
 
         //1 Variable 1 State 2 Values
-        createCase(1,1,2,true,true,"TestUE10",testSurveyUnitUpdateDtos,metadataModel.getVariables());
+        createCase(1,1,2,true,true,"TestUE10",testSurveyUnitDtos,metadataModel.getVariables());
 
         //1 Variable 2 States 1 Value
-        createCase(1,2,1,true,true,"TestUE11",testSurveyUnitUpdateDtos,metadataModel.getVariables());
+        createCase(1,2,1,true,true,"TestUE11",testSurveyUnitDtos,metadataModel.getVariables());
 
         //1 Variable 2 States 2 Values
-        createCase(1,2,2,true,true,"TestUE12",testSurveyUnitUpdateDtos,metadataModel.getVariables());
+        createCase(1,2,2,true,true,"TestUE12",testSurveyUnitDtos,metadataModel.getVariables());
 
         //2 Variables 1 State 1 Value
-        createCase(2,1,1,true,true,"TestUE13",testSurveyUnitUpdateDtos,metadataModel.getVariables());
+        createCase(2,1,1,true,true,"TestUE13",testSurveyUnitDtos,metadataModel.getVariables());
 
         //2 Variables 1 State 2 Values
-        createCase(2,1,2,true,true,"TestUE14",testSurveyUnitUpdateDtos,metadataModel.getVariables());
+        createCase(2,1,2,true,true,"TestUE14",testSurveyUnitDtos,metadataModel.getVariables());
 
         //2 Variables 2 States 1 Value
-        createCase(2,2,1,true,true,"TestUE15",testSurveyUnitUpdateDtos,metadataModel.getVariables());
+        createCase(2,2,1,true,true,"TestUE15",testSurveyUnitDtos,metadataModel.getVariables());
 
         //2 Variables 2 State 2 Value
-        createCase(2,2,2,true,true,"TestUE16",testSurveyUnitUpdateDtos,metadataModel.getVariables());
+        createCase(2,2,2,true,true,"TestUE16",testSurveyUnitDtos,metadataModel.getVariables());
 
 
         //Valid variables only
-        createCase(1,1,1,false,true,"TestUE17",testSurveyUnitUpdateDtos,metadataModel.getVariables());
-        createCase(2,2,2,false,true,"TestUE18",testSurveyUnitUpdateDtos,metadataModel.getVariables());
+        createCase(1,1,1,false,true,"TestUE17",testSurveyUnitDtos,metadataModel.getVariables());
+        createCase(2,2,2,false,true,"TestUE18",testSurveyUnitDtos,metadataModel.getVariables());
 
         //Manual modifications
         //Valid 2nd variable on 5th and 13th case
-        SurveyUnitUpdateDto suDto = testSurveyUnitUpdateDtos.stream().filter(surveyUnitUpdateDto ->
-                surveyUnitUpdateDto.getIdUE().equals("TestUE5")
-        ).toList().get(0);
+        SurveyUnitDto suDto = testSurveyUnitDtos.stream().filter(surveyUnitDto ->
+                surveyUnitDto.getIdUE().equals("TestUE5")
+        ).toList().getFirst();
 
         suDto.getCollectedVariables().get(1).getValues().set(0,"1");
 
-        suDto = testSurveyUnitUpdateDtos.stream().filter(surveyUnitUpdateDto ->
-                surveyUnitUpdateDto.getIdUE().equals("TestUE13")
-        ).toList().get(0);
+        suDto = testSurveyUnitDtos.stream().filter(surveyUnitDto ->
+                surveyUnitDto.getIdUE().equals("TestUE13")
+        ).toList().getFirst();
 
         suDto.getCollectedVariables().get(1).getValues().set(0,"1");
         suDto.getExternalVariables().get(1).getValues().set(0,"1");
 
 
         //Valid EDITED variables on 3rd and 7th case for priority test
-        SurveyUnitUpdateDto suDtoEdited = testSurveyUnitUpdateDtos.stream().filter(surveyUnitUpdateDto ->
-                surveyUnitUpdateDto.getIdUE().equals("TestUE3")
-                && surveyUnitUpdateDto.getState().equals(DataState.EDITED)
-                ).toList().get(0);
+        SurveyUnitDto suDtoEdited = testSurveyUnitDtos.stream().filter(surveyUnitDto ->
+                surveyUnitDto.getIdUE().equals("TestUE3")
+                && surveyUnitDto.getState().equals(DataState.EDITED)
+                ).toList().getFirst();
 
-        suDtoEdited.getCollectedVariables().get(0).getValues().set(0,"1");
+        suDtoEdited.getCollectedVariables().getFirst().getValues().set(0,"1");
 
-        suDtoEdited = testSurveyUnitUpdateDtos.stream().filter(surveyUnitUpdateDto ->
-                surveyUnitUpdateDto.getIdUE().equals("TestUE7")
-                        && surveyUnitUpdateDto.getState().equals(DataState.EDITED)
-        ).toList().get(0);
+        suDtoEdited = testSurveyUnitDtos.stream().filter(surveyUnitDto ->
+                surveyUnitDto.getIdUE().equals("TestUE7")
+                        && surveyUnitDto.getState().equals(DataState.EDITED)
+        ).toList().getFirst();
 
         suDtoEdited.getCollectedVariables().get(0).getValues().set(0,"1");
         suDtoEdited.getCollectedVariables().get(1).getValues().set(0,"1");
 
         //Remove EDITED variable on 8th case
-        suDtoEdited = testSurveyUnitUpdateDtos.stream().filter(surveyUnitUpdateDto ->
-                surveyUnitUpdateDto.getIdUE().equals("TestUE8")
-                        && surveyUnitUpdateDto.getState().equals(DataState.EDITED)
-        ).toList().get(0);
+        suDtoEdited = testSurveyUnitDtos.stream().filter(surveyUnitDto ->
+                surveyUnitDto.getIdUE().equals("TestUE8")
+                        && surveyUnitDto.getState().equals(DataState.EDITED)
+        ).toList().getFirst();
 
         suDtoEdited.getCollectedVariables().remove(1);
 
         //When
-        DataVerifier.verifySurveyUnits(testSurveyUnitUpdateDtos,metadataModel.getVariables());
+        DataVerifier.verifySurveyUnits(testSurveyUnitDtos,metadataModel.getVariables());
     }
 
-    private static void createCase(int variableNumber, int stateNumber, int valueNumber, boolean hasIncorrectValues, boolean hasExternalVariables, String idUE, List<SurveyUnitUpdateDto> testSurveyUnitUpdateDtos, VariablesMap variablesMap) {
+    private static void createCase(int variableNumber, int stateNumber, int valueNumber, boolean hasIncorrectValues, boolean hasExternalVariables, String idUE, List<SurveyUnitDto> testSurveyUnitDtos, VariablesMap variablesMap) {
         for(int stateIndex = 0; stateIndex < stateNumber; stateIndex++){
             List<CollectedVariableDto> variableUpdates = new ArrayList<>();
             List<VariableDto> externalVariables = new ArrayList<>();
@@ -161,7 +161,7 @@ class DataVerifierTest {
                 }
             }
 
-            SurveyUnitUpdateDto surveyUnitUpdateDto = SurveyUnitUpdateDto.builder()
+            SurveyUnitDto surveyUnitDto = SurveyUnitDto.builder()
                     .idQuest("IdQuest1")
                     .idCampaign("IdCampaign1")
                     .idUE(idUE)
@@ -175,36 +175,36 @@ class DataVerifierTest {
             variableUpdates.clear();
             externalVariables.clear();
 
-            testSurveyUnitUpdateDtos.add(surveyUnitUpdateDto);
+            testSurveyUnitDtos.add(surveyUnitDto);
         }
     }
 
     //Then
     //Assertions
-    private void assertForcedExistence(List<SurveyUnitUpdateDto> testSurveyUnitUpdateDtos, String idUE, boolean hasToExist) {
+    private void assertForcedExistence(List<SurveyUnitDto> testSurveyUnitDtos, String idUE, boolean hasToExist) {
         if(hasToExist)
-            assertThat(testSurveyUnitUpdateDtos).filteredOn(surveyUnit ->
+            assertThat(testSurveyUnitDtos).filteredOn(surveyUnit ->
                             surveyUnit.getIdUE().equals(idUE)
                                     && surveyUnit.getState() == DataState.FORCED)
                     .hasSize(1);
         else
-            assertThat(testSurveyUnitUpdateDtos).filteredOn(surveyUnit ->
+            assertThat(testSurveyUnitDtos).filteredOn(surveyUnit ->
                             surveyUnit.getIdUE().equals(idUE)
                                     && surveyUnit.getState() == DataState.FORCED)
                 .isEmpty();
     }
 
-    private void assertCollectedVariableContent(List<SurveyUnitUpdateDto> testSurveyUnitUpdateDtos, String idUE, String variableName, int valueIndex, String expectedContent) {
-        assertForcedExistence(testSurveyUnitUpdateDtos,idUE,true);
+    private void assertCollectedVariableContent(List<SurveyUnitDto> testSurveyUnitDtos, String idUE, String variableName, int valueIndex, String expectedContent) {
+        assertForcedExistence(testSurveyUnitDtos,idUE,true);
 
-        Optional<SurveyUnitUpdateDto> suDtoOpt = testSurveyUnitUpdateDtos.stream().filter(surveyUnit ->
+        Optional<SurveyUnitDto> suDtoOpt = testSurveyUnitDtos.stream().filter(surveyUnit ->
                         surveyUnit.getIdUE().equals(idUE)
                                 && surveyUnit.getState() == DataState.FORCED).findFirst();
 
         assertThat(suDtoOpt).isPresent();
 
 
-        SurveyUnitUpdateDto suDto = suDtoOpt.get();
+        SurveyUnitDto suDto = suDtoOpt.get();
 
         assertThat(suDto.getCollectedVariables().stream().filter(collectedVariableDto ->
                 collectedVariableDto.getIdVar().equals(variableName)
@@ -219,14 +219,14 @@ class DataVerifierTest {
         ).findFirst().get().getValues().get(valueIndex)).isEqualTo(expectedContent);
     }
 
-    private void assertForcedCollectedVariableExistence(List<SurveyUnitUpdateDto> testSurveyUnitUpdateDtos, String idUE, String variableName, boolean hasToExist) {
-        assertForcedExistence(testSurveyUnitUpdateDtos,idUE, true);
-        Optional<SurveyUnitUpdateDto> suDtoOpt = testSurveyUnitUpdateDtos.stream().filter(surveyUnit ->
+    private void assertForcedCollectedVariableExistence(List<SurveyUnitDto> testSurveyUnitDtos, String idUE, String variableName, boolean hasToExist) {
+        assertForcedExistence(testSurveyUnitDtos,idUE, true);
+        Optional<SurveyUnitDto> suDtoOpt = testSurveyUnitDtos.stream().filter(surveyUnit ->
                 surveyUnit.getIdUE().equals(idUE)
                         && surveyUnit.getState() == DataState.FORCED).findFirst();
         assertThat(suDtoOpt).isPresent();
 
-        SurveyUnitUpdateDto suDto = suDtoOpt.get();
+        SurveyUnitDto suDto = suDtoOpt.get();
 
         if(hasToExist)
             assertThat(suDto.getCollectedVariables().stream().filter(collectedVariableDto -> collectedVariableDto.getIdVar().equals(variableName)).toList()).isNotEmpty();
@@ -234,14 +234,14 @@ class DataVerifierTest {
             assertThat(suDto.getCollectedVariables().stream().filter(collectedVariableDto -> collectedVariableDto.getIdVar().equals(variableName)).toList()).isEmpty();
     }
 
-    private void assertForcedExternalVariableExistence(List<SurveyUnitUpdateDto> testSurveyUnitUpdateDtos, String idUE, String variableName, boolean hasToExist) {
-        assertForcedExistence(testSurveyUnitUpdateDtos,idUE, true);
-        Optional<SurveyUnitUpdateDto> suDtoOpt = testSurveyUnitUpdateDtos.stream().filter(surveyUnit ->
+    private void assertForcedExternalVariableExistence(List<SurveyUnitDto> testSurveyUnitDtos, String idUE, String variableName, boolean hasToExist) {
+        assertForcedExistence(testSurveyUnitDtos,idUE, true);
+        Optional<SurveyUnitDto> suDtoOpt = testSurveyUnitDtos.stream().filter(surveyUnit ->
                 surveyUnit.getIdUE().equals(idUE)
                         && surveyUnit.getState() == DataState.FORCED).findFirst();
         assertThat(suDtoOpt).isPresent();
 
-        SurveyUnitUpdateDto suDto = suDtoOpt.get();
+        SurveyUnitDto suDto = suDtoOpt.get();
 
         if(hasToExist)
             assertThat(suDto.getExternalVariables().stream().filter(variableDto -> variableDto.getIdVar().equals(variableName)).toList()).isNotEmpty();
@@ -249,17 +249,17 @@ class DataVerifierTest {
             assertThat(suDto.getExternalVariables().stream().filter(variableDto -> variableDto.getIdVar().equals(variableName)).toList()).isEmpty();
     }
 
-    private void assertExternalVariableContent(List<SurveyUnitUpdateDto> testSurveyUnitUpdateDtos, String idUE, String variableName, int valueIndex, String expectedContent) {
-        assertForcedExistence(testSurveyUnitUpdateDtos,idUE,true);
+    private void assertExternalVariableContent(List<SurveyUnitDto> testSurveyUnitDtos, String idUE, String variableName, int valueIndex, String expectedContent) {
+        assertForcedExistence(testSurveyUnitDtos,idUE,true);
 
-        Optional<SurveyUnitUpdateDto> suDtoOpt = testSurveyUnitUpdateDtos.stream().filter(surveyUnit ->
+        Optional<SurveyUnitDto> suDtoOpt = testSurveyUnitDtos.stream().filter(surveyUnit ->
                 surveyUnit.getIdUE().equals(idUE)
                         && surveyUnit.getState() == DataState.FORCED).findFirst();
 
         assertThat(suDtoOpt).isPresent();
 
 
-        SurveyUnitUpdateDto suDto = suDtoOpt.get();
+        SurveyUnitDto suDto = suDtoOpt.get();
 
         assertThat(suDto.getExternalVariables().stream().filter(variableDto ->
                 variableDto.getIdVar().equals(variableName)
@@ -278,25 +278,25 @@ class DataVerifierTest {
     @Test
     @DisplayName("If there is invalid values, there must be one FORCED document")
     void forcedExistenceTest(){
-        assertForcedExistence(testSurveyUnitUpdateDtos, "TestUE1", true);
+        assertForcedExistence(testSurveyUnitDtos, "TestUE1", true);
     }
 
     @Test
     @DisplayName("If there is no invalid values, there must be one FORCED document")
     void forcedNoExistenceTest(){
-        assertForcedExistence(testSurveyUnitUpdateDtos, "TestUE17", false);
+        assertForcedExistence(testSurveyUnitDtos, "TestUE17", false);
     }
 
     @Test
     @DisplayName("The invalid values must be replaced by empty string")
     void invalidValueReplaceTest(){
-        assertCollectedVariableContent(testSurveyUnitUpdateDtos,"TestUE1","testInteger0",0,"");
-        assertCollectedVariableContent(testSurveyUnitUpdateDtos,"TestUE2","testInteger0",0,"");
-        assertCollectedVariableContent(testSurveyUnitUpdateDtos,"TestUE6","testInteger0",0,"");
+        assertCollectedVariableContent(testSurveyUnitDtos,"TestUE1","testInteger0",0,"");
+        assertCollectedVariableContent(testSurveyUnitDtos,"TestUE2","testInteger0",0,"");
+        assertCollectedVariableContent(testSurveyUnitDtos,"TestUE6","testInteger0",0,"");
 
-        assertExternalVariableContent(testSurveyUnitUpdateDtos,"TestUE9","testInteger0",0,"");
-        assertExternalVariableContent(testSurveyUnitUpdateDtos,"TestUE10","testInteger0",0,"");
-        assertExternalVariableContent(testSurveyUnitUpdateDtos,"TestUE14","testInteger0",0,"");
+        assertExternalVariableContent(testSurveyUnitDtos,"TestUE9","testInteger0",0,"");
+        assertExternalVariableContent(testSurveyUnitDtos,"TestUE10","testInteger0",0,"");
+        assertExternalVariableContent(testSurveyUnitDtos,"TestUE14","testInteger0",0,"");
 
     }
 
@@ -305,26 +305,26 @@ class DataVerifierTest {
     void variableCountTest(){
         //Collected
         //5 à 8
-        assertForcedCollectedVariableExistence(testSurveyUnitUpdateDtos, "TestUE5", "testInteger0", true);
-        assertForcedCollectedVariableExistence(testSurveyUnitUpdateDtos, "TestUE5", "testInteger1", false);
+        assertForcedCollectedVariableExistence(testSurveyUnitDtos, "TestUE5", "testInteger0", true);
+        assertForcedCollectedVariableExistence(testSurveyUnitDtos, "TestUE5", "testInteger1", false);
 
         //External
         //13 à 16
-        assertForcedExternalVariableExistence(testSurveyUnitUpdateDtos, "TestUE13", "testInteger0", true);
-        assertForcedExternalVariableExistence(testSurveyUnitUpdateDtos, "TestUE13", "testInteger1", false);
+        assertForcedExternalVariableExistence(testSurveyUnitDtos, "TestUE13", "testInteger0", true);
+        assertForcedExternalVariableExistence(testSurveyUnitDtos, "TestUE13", "testInteger1", false);
     }
 
     @Test
     @DisplayName("The dataverifier must verify only the most priority variables")
     void priorityTest(){
-        assertForcedExistence(testSurveyUnitUpdateDtos, "TestUE3",false);
-        assertForcedExistence(testSurveyUnitUpdateDtos, "TestUE7",false);
+        assertForcedExistence(testSurveyUnitDtos, "TestUE3",false);
+        assertForcedExistence(testSurveyUnitDtos, "TestUE7",false);
     }
 
     @Test
     @DisplayName("If a variable is absent in more priority variable but invalid in less priority," +
                         "the variable must be present in FORCED")
     void priorityVariableAbsenceTest(){
-        assertForcedCollectedVariableExistence(testSurveyUnitUpdateDtos,"TestUE8","testInteger1",true);
+        assertForcedCollectedVariableExistence(testSurveyUnitDtos,"TestUE8","testInteger1",true);
     }
 }
